# insureAI

./: README.md  docker-compose.yaml
assure_ai/: .env.example  .gitignore  Dockerfile  README.md  README_GUIDED_CHAT_ENDPOINT.md  README_TEL_ENDPOINT.md  docker-compose.yaml  flake.nix  pyproject.toml
assure_ai/.github/: copilot-instructions.md
assure_ai/.github/workflows/: tests.yml
assure_ai/VD/: README.md
assure_ai/VD/scripts/: build_qdrant_vector_dbs.py  build_tel_vector_db.py
assure_ai/assure_ai/: __init__.py  __main__.py  settings.py
assure_ai/assure_ai/agents/: __init__.py  chat_agent.py  langfuse_config.py  llm_model.py  qdrant_retriever.py
assure_ai/assure_ai/common/: __init__.py  response.py
assure_ai/assure_ai/db/: dependencies.py
assure_ai/assure_ai/tracing/: __init__.py  config.py  decorator.py  logging.py
assure_ai/assure_ai/web/: __init__.py  application.py  chatbot.py  guided_chatbot.py  health_check.py  lifespan.py  tel.py
insurai/: .env.example  Dockerfile  README.md  README_GUIDED_CHAT_ENDPOINT.md  backend_api.md  flake.nix  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
insurai/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
insurai/src/: App.tsx  index.css  main.tsx
insurai/src/lib/: auth-context.tsx  chat-api.ts  firebase-auth.ts  (+1 more)
phone _agent/: README.md  agent.py  gemini.py  pyproject.toml  rag.py  setup.sh  stt.py  tts.py
phone _agent/asterisk/: extensions.conf  modules.conf  pjsip.conf  sip.conf
(+32 files in other folders)
